Added floating links and made website static

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,10 +28,10 @@ import "../styles/global.css";
 		<a href="/index.html" target="_blank" class="nav-link home">
 			<i class="fas fa-home"></i>
 		</a>
-		<a href="https://github.com/Kevinbrito" target="_blank" class="nav-link github">
+		<a href="https://github.com/Kevinbrito" target="_blank" class="nav-link github" aria-label="github">
 			<i class="fab fa-github"></i>
 		</a>
-		<a href="/Files/CSE Resume 2021.pdf" target="_blank" class="nav-link resume">
+		<a href="src/assets/documents/Kevin Brito Resume 2025.pdf" target="_blank" class="nav-link resume">
 			<i class="fas fa-file-invoice"></i>
 		</a>
 		<a href="https://www.linkedin.com/in/kevin-brito-9297a992/" target="_blank" class="nav-link linkedin">
