--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href={Astro.base + "favicon.svg"} />
 		<meta name="generator" content={Astro.generator} />
 		<title>Kevin Brito</title>
 		<!-- Font Awesome Icons -->
@@ -25,16 +25,16 @@ import "../styles/global.css";
 		</div>
 
 		<!-- Navigation Links -->
-		<a href="/index.html" target="_blank" class="nav-link home">
+		<a href={ Astro.base + "/index.html"} target="_blank" class="nav-link home">
 			<i class="fas fa-home"></i>
 		</a>
-		<a href="https://github.com/Kevinbrito" target="_blank" class="nav-link github" aria-label="github">
+		<a href={ Astro.base + "https://github.com/Kevinbrito"} target="_blank" class="nav-link github" aria-label="github">
 			<i class="fab fa-github"></i>
 		</a>
-		<a href="src/assets/documents/Kevin Brito Resume 2025.pdf" target="_blank" class="nav-link resume">
+		<a href={ Astro.base + "documents/Kevin Brito Resume 2025.pdf"} target="_blank" class="nav-link resume">
 			<i class="fas fa-file-invoice"></i>
 		</a>
-		<a href="https://www.linkedin.com/in/kevin-brito-9297a992/" target="_blank" class="nav-link linkedin">
+		<a href={ Astro.base + "https://www.linkedin.com/in/kevin-brito-9297a992/"} target="_blank" class="nav-link linkedin">
 			<i class="fab fa-linkedin"></i>
 		</a>
 
