--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@ body {
     html, body {
       overflow: hidden; /* Prevents scrolling */
       touch-action: none; /* Disables swipe-based scrolling */
-      height: 100%;
+      height: 100vh;
     }
   }
 
